# cicflowmeter

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: style.yml
src/cicflowmeter/: cli.py  flow.py  flow_session.py  sniffer.py  utils.py  writer.py
src/cicflowmeter/features/: flag_count.py  flow_bytes.py  packet_count.py  packet_length.py  packet_time.py  response_time.py
src/cicflowmeter/features/context/: __init__.py
tests/: test_features.py
