[project]
name = "cicflowmeter"
version = "0.4.4"
description = "CICFlowMeter Python Implementation"
authors = [{ name = "Hieu Le", email = "hieulw99@gmail.com" }, { name = "Seth Barrett", email = "sebarrett@augusta.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scapy>=2.7.0",
    "scipy>=1.17.1",
]
changelog = "CHANGELOG.md"
homepage = "https://github.com/hieulw/cicflowmeter"
repository = "https://github.com/hieulw/cicflowmeter"

[project.scripts]
cicflowmeter = "cicflowmeter.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
